feat(app): Adding navbar #1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
+<div class="topnav">
+  <a href="#">
+    <div class="topnav__left">
+      <fa-icon [icon]="faInfoCircle"></fa-icon>
+      Ajuda
+    </div>
+  </a>
+  <a href="#"><img src="assets/img/logo-querobolsa.svg" alt="Logo Quero Bolsa" /></a>
+  <a href="#">
+    <div class="topnav__right">
+      <fa-icon [icon]="faUserCircle"></fa-icon>
+      Conta
+    </div>
+  </a>
+</div>
 <router-outlet></router-outlet>
