feat(app): Adding topmenu #1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,19 @@
     </div>
   </a>
 </div>
+<div class="topmenu">
+  <p>Minha conta</p>
+  <div class="dropdown">
+    <button class="dropdown__button">
+      <div>
+        Menu
+        <fa-icon [icon]="faChevronDown"></fa-icon>
+      </div>
+    </button>
+    <div class="dropdown__content">
+      <a href="#">Pré-matrícula</a>
+      <a href="#">Bolsas favoritas</a>
+    </div>
+  </div>
+</div>
 <router-outlet></router-outlet>
