--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -11,20 +11,23 @@ $modal-overlay: #1F2D30 // opacity 88%
 @media (max-width: 576px)
   $border-grey: 1px solid lightgrey
 
+  %flex-between
+    display: flex
+    justify-content: space-between
+
   %topnav__item
     align-items: center
     display: flex
     flex-direction: column
-    padding: 0 10px
+    padding: 0 15px
 
   .topnav
-    display: flex
-    justify-content: space-between
+    @extend %flex-between
     a
       color: $secondary-blue
       font-size: 12px
       font-weight: bold
-      margin: 0 0 10px 0
+      margin: 10px 0 10px 0
       text-decoration: none
       fa-icon
         font-size: 20px
@@ -39,3 +42,47 @@ $modal-overlay: #1F2D30 // opacity 88%
         border-right: $border-grey
       .topnav__right
         border-left: $border-grey
+
+  .topmenu
+    @extend %flex-between
+    background-color: $main-blue
+    color: #FFF
+    font-family: Arial, Helvetica, sans-serif
+    font-weight: bold
+    padding: 0 15px
+    .dropdown
+      position: relative
+      display: inline-block
+      .dropdown__button
+        background-color: $main-blue
+        border: none
+        color: #FFF
+        cursor: pointer
+        display: flex
+        flex-direction: column
+        font-size: 16px
+        font-weight: bold
+        height: 100%
+        justify-content: center
+        fa-icon
+          font-size: 12px
+          margin-left: 10px
+      .dropdown__content
+        background-color: $background-grey
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
+        display: none
+        min-width: 160px
+        position: absolute
+        right: 0
+        z-index: 1
+        a
+          color: $text-black
+          display: block
+          padding: 12px 16px
+          text-decoration: none
+
+    .dropdown:hover .dropdown__content
+      display: block
+
+    .dropdown:hover .dropdown__button
+      background-color: $main-blue
