feat(footer): Starting footer itens #4

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,3 +29,27 @@
   </div>
 </div>
 <router-outlet></router-outlet>
+<footer>
+  <div>
+    <div>
+      <fa-icon [icon]="faWhatsapp"></fa-icon>
+      <div>
+        <p>0800 123 2222</p>
+        <p>Segunda a sexta de 8h às 22h</p>
+      </div>
+    </div>
+    <div class="footer__chat">
+      <fa-icon [icon]="faComments"></fa-icon>
+      Chat
+    </div>
+    <div class="footer__email">
+      <fa-icon [icon]="faEnvelope"></fa-icon>
+      E-mail
+    </div>
+    <div class="footer__help">
+      <fa-icon [icon]="faInfoCircle"></fa-icon>
+      Ajuda
+    </div>
+  </div>
+  <h4>Feito com <fa-icon [icon]="faHeart"></fa-icon> pela Quero Educação</h4>
+</footer>
