--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,25 +30,27 @@
 </div>
 <router-outlet></router-outlet>
 <footer>
-  <div>
-    <div>
+  <div class="footer__items">
+    <div class="footer__first-item">
       <fa-icon [icon]="faWhatsapp"></fa-icon>
-      <div>
+      <div class="footer__first-item__phone">
         <p>0800 123 2222</p>
         <p>Segunda a sexta de 8h às 22h</p>
       </div>
     </div>
-    <div class="footer__chat">
-      <fa-icon [icon]="faComments"></fa-icon>
-      Chat
-    </div>
-    <div class="footer__email">
-      <fa-icon [icon]="faEnvelope"></fa-icon>
-      E-mail
-    </div>
-    <div class="footer__help">
-      <fa-icon [icon]="faInfoCircle"></fa-icon>
-      Ajuda
+    <div class="footer__second-item">
+      <div class="footer__subitem">
+        <fa-icon [icon]="faComments"></fa-icon>
+        Chat
+      </div>
+      <div class="footer__subitem">
+        <fa-icon [icon]="faEnvelope"></fa-icon>
+        E-mail
+      </div>
+      <div class="footer__subitem--last">
+        <fa-icon [icon]="faInfoCircle"></fa-icon>
+        Ajuda
+      </div>
     </div>
   </div>
   <h4>Feito com <fa-icon [icon]="faHeart"></fa-icon> pela Quero Educação</h4>
