--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -21,6 +21,12 @@ $modal-overlay: #1F2D30 // opacity 88%
     flex-direction: column
     padding: 0 15px
 
+  .header-footer
+    display: flex
+    flex-direction: column
+    height: 100vh
+    justify-content: space-between
+
   .topnav
     @extend %flex-between
     a
