--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,3 +61,13 @@
     <h4>Feito com <fa-icon [icon]="faHeart"></fa-icon> pela Quero Educação</h4>
   </footer>
 </div>
+
+<div class="modal" [ngStyle]="{'display': modalVisibility}">
+  <fa-icon class="modal__close" [icon]="faTimes"></fa-icon>
+  <div class="modal__content">
+    <div class="modal__body">
+      <h3>Adicionar bolsa</h3>
+      <p>Filtre e adicione as bolsas de seu interesse.</p>
+    </div>
+  </div>
+</div>
