refactor(modal): Moving modal to Shared Modules #9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-modal></app-modal>
 <div class="header-footer">
   <div>
     <header>
@@ -60,14 +61,4 @@
     </div>
     <h4>Feito com <fa-icon [icon]="faHeart"></fa-icon> pela Quero Educação</h4>
   </footer>
-</div>
-
-<div class="modal" [ngStyle]="{'display': modalVisibility}">
-  <fa-icon class="modal__close" [icon]="faTimes"></fa-icon>
-  <div class="modal__content">
-    <div class="modal__body">
-      <h3>Adicionar bolsa</h3>
-      <p>Filtre e adicione as bolsas de seu interesse.</p>
-    </div>
-  </div>
 </div>
