--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal" [ngStyle]="{'display': modalVisibility}" (click)="changeModalVisibility()">
+<div class="modal">
   <fa-icon class="modal__close" [icon]="faTimes"></fa-icon>
   <div class="modal__content">
     <div class="modal__body">
