refactor(modal): Sending body via template #9

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,4 +30,10 @@
   </div>
 </div>
 
-<app-modal [ngStyle]="{'display': modalVisibility}" (click)="changeModalVisibility()"></app-modal>
+<app-modal [modalBody]="modalBody" [ngStyle]="{'display': modalVisibility}" (closeModal)="changeModalVisibility()">
+</app-modal>
+
+<ng-template #modalBody>
+  <h3>Adicionar bolsa</h3>
+  <p>Filtre e adicione as bolsas de seu interesse.</p>
+</ng-template>
