--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,9 +1,8 @@
 <div class="modal">
-  <fa-icon class="modal__close" [icon]="faTimes"></fa-icon>
+  <fa-icon class="modal__close" [icon]="faTimes" (click)="close()"></fa-icon>
   <div class="modal__content">
     <div class="modal__body">
-      <h3>Adicionar bolsa</h3>
-      <p>Filtre e adicione as bolsas de seu interesse.</p>
+      <ng-container [ngTemplateOutlet]="modalBody"></ng-container>
     </div>
   </div>
 </div>
