--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -75,3 +75,7 @@ $modal-overlay: #1F2D30 // opacity 88%
     .btn-group--last
       border-radius: 0 0 5px 5px
       border-top: none
+
+app-input-select
+  display: flex
+  flex-direction: column
