--- a/src/app/shared/inputs/input-select/input-select.component.html
+++ b/src/app/shared/inputs/input-select/input-select.component.html
@@ -1,3 +1,4 @@
 <label *ngIf="label">{{label}}</label>
-<ng-select class="custom" [items]="options" bindLabel="label" bindValue="value" autofocus [(ngModel)]="selectedItem">
+<ng-select class="custom" [items]="options" [clearable]="false" bindLabel="label" bindValue="value" autofocus
+  [(ngModel)]="selectedItem">
 </ng-select>
