refactor(checkbox): Changing variable name #9

--- a/src/app/shared/inputs/input-checkbox/input-checkbox.component.sass
+++ b/src/app/shared/inputs/input-checkbox/input-checkbox.component.sass
@@ -7,19 +7,19 @@ $text-black: #1F2D30
   height: 15px
   width: 15px
 
-.not-clicked
+.not-checked
   border: 1px solid $text-black
 
-.clicked
+.checked
   background-color: $main-blue
   border: 1px solid $main-blue
 
-.clicked--icon
+.checked--icon
   color: #FFF
   display: flex
   font-size: 12px
   justify-content: center
   margin-top: 1px
 
-.not-clicked--icon
+.not-checked--icon
   display: none
