--- a/src/app/shared/inputs/input-checkbox/input-checkbox.component.html
+++ b/src/app/shared/inputs/input-checkbox/input-checkbox.component.html
@@ -1,3 +1,3 @@
-<div class="checkbox" [ngClass]="{'not-clicked': !clicked, 'clicked': clicked}" (click)="click()">
-  <fa-icon [icon]="faCheck" [ngClass]="{'not-clicked--icon': !clicked, 'clicked--icon': clicked}"></fa-icon>
+<div class="checkbox" [ngClass]="{'not-checked': !checked, 'checked': checked}" (click)="click()">
+  <fa-icon [icon]="faCheck" [ngClass]="{'not-checked--icon': !checked, 'checked--icon': checked}"></fa-icon>
 </div>
