--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -19,7 +19,6 @@ $modal-overlay: #1F2D30E0 // #1F2D30 opacity 88%
     align-items: center
     display: flex
     flex-direction: column
-    padding: 0 15px
 
   .header-footer
     display: flex
@@ -44,10 +43,13 @@ $modal-overlay: #1F2D30E0 // #1F2D30 opacity 88%
         @extend %topnav__item
         flex: 3
         height: 90%
+        padding: 0
       .topnav__left
         border-right: $border-grey
+        padding: 0 15px
       .topnav__right
         border-left: $border-grey
+        padding: 0 15px
 
   .topmenu
     @extend %flex-between
