--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,5 +42,5 @@
   <app-input-select [label]="'SELECIONE O CURSO DE SUA PREFERÊNCIA'" [name]="'city'"
     [options]="[{value: 'string', label: 'string'}, {value: 'string', label: 'string'}]">
   </app-input-select>
-  <app-input-checkbox></app-input-checkbox>
+  <app-input-checkbox [form]="form" key="studyModality"></app-input-checkbox>
 </ng-template>
