refactor(home): Adding selects to form builder #9

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,10 +37,10 @@
   <h3>Adicionar bolsa</h3>
   <p>Filtre e adicione as bolsas de seu interesse.</p>
   <app-input-select [label]="'SELECIONE SUA CIDADE'" [name]="'city'"
-    [options]="[{value: 'string', label: 'string'}, {value: 'string', label: 'string'}]">
+    [form]="form" key="city">
   </app-input-select>
-  <app-input-select [label]="'SELECIONE O CURSO DE SUA PREFERÊNCIA'" [name]="'city'"
-    [options]="[{value: 'string', label: 'string'}, {value: 'string', label: 'string'}]">
+  <app-input-select [label]="'SELECIONE O CURSO DE SUA PREFERÊNCIA'" [name]="'course'"
+    [form]="form" key="course">
   </app-input-select>
   <label class="label-title">COMO VOCÊ QUER ESTUDAR?</label>
   <div class="study-modality">
