--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -101,3 +101,9 @@ app-input-select
     margin-left: 20px
     label
       margin-left: 5px
+
+.flex-between
+  display: flex
+  flex-direction: row
+  font-weight: bold
+  justify-content: space-between
