--- a/src/app/shared/inputs/input-select/input-select.component.html
+++ b/src/app/shared/inputs/input-select/input-select.component.html
@@ -1,4 +1,5 @@
 <label *ngIf="label">{{label}}</label>
 <ng-select [ngClass]="{unbordered: unbordered}" [items]="options" [clearable]="false" bindLabel="label"
-  bindValue="value" autofocus [(ngModel)]="selectedItem" (ngModelChange)="modelChanged($event)" [ngStyle]="styles">
+  bindValue="value" autofocus [(ngModel)]="this.inputControl.value" (ngModelChange)="modelChanged($event)"
+  [ngStyle]="styles">
 </ng-select>
