feat(button-group): Created component #9

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,17 +8,8 @@
     Adicione bolsas de cursos e faculdades do seu interesse e receba atualizações
     com as melhores ofertas disponíveis.
   </p>
-  <div class="btn-group">
-    <button class="btn-group--first" [ngClass]="{'button__active': semesterChoice === 1}" (click)="changeSemester(1)">
-      Todos os semestres
-    </button>
-    <button [ngClass]="{'button__active': semesterChoice === 2}" (click)="changeSemester(2)">
-      2º semestre de 2019
-    </button>
-    <button class="btn-group--last" [ngClass]="{'button__active': semesterChoice === 3}" (click)="changeSemester(3)">
-      1º semestre de 2020
-    </button>
-  </div>
+  <app-input-button-group name="semester" [options]="semesters" [form]="formButtonGroup" key="semester">
+  </app-input-button-group>
   <div class="add-scholarship" (click)="changeModalVisibility()">
     <div class="add-scholarship__items">
       <div>
