--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,4 +54,5 @@
   </div>
   <app-input-select style="display: flex; width: 100%;align-items: flex-end" name="order" [styles]="styles"
     [options]="orderArray" [form]="form" key="order" [unbordered]="true"></app-input-select>
+  <app-scholarship-list [options]="scholarshipsFiltered" [form]="form" key="scholarshipList"></app-scholarship-list>
 </ng-template>
