feat(button): Added button component #9

--- a/src/app/shared/modal/modal.component.sass
+++ b/src/app/shared/modal/modal.component.sass
@@ -32,7 +32,7 @@ $modal-overlay: #1F2D30E0 // #1F2D30 opacity 88%
     animation-duration: 0.4s
     animation-name: animatetop
     background-color: #fefefe
-    margin: 50px auto auto auto
+    margin: 50px auto
     padding: 0
     position: relative
     width: 100% // Full width
