--- a/src/app/shared/button/button.component.sass
+++ b/src/app/shared/button/button.component.sass
@@ -50,6 +50,6 @@ $background-grey: #FBFBFB
   color: black
 
 .disabled
-  background-color: #FBFBFB
+  background-color: lightgray
   border: 2px solid grey
   color: grey
