--- a/src/app/shared/button/button.component.sass
+++ b/src/app/shared/button/button.component.sass
@@ -53,3 +53,8 @@ $background-grey: #FBFBFB
   background-color: lightgray
   border: 2px solid grey
   color: grey
+
+.disabled:hover
+  background-color: lightgray
+  border: 2px solid grey
+  color: grey
