--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,1 +1,1 @@
-<button [class]="'button ' + colorClass" [ngClass]="{ disabled: this.disabled }">{{label}}</button>
+<button [class]="'button ' + colorClass" [ngClass]="{ disabled: this.disabled }" (click)="clicked()">{{label}}</button>
