--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -107,3 +107,8 @@ app-input-select
   flex-direction: row
   font-weight: bold
   justify-content: space-between
+
+.select-order
+  align-items: flex-end
+  display: flex
+  width: 100%
