--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,21 +32,21 @@
     (changeInput)="cityChanged($event)">
   </app-input-select>
   <app-input-select label="SELECIONE O CURSO DE SUA PREFERÊNCIA" name="course" [options]="courses" [form]="form"
-    key="course">
+    key="course" (changeInput)="changeList()">
   </app-input-select>
   <label class="label-title">COMO VOCÊ QUER ESTUDAR?</label>
   <div class="study-modality">
     <div class="study-modality__first">
-      <app-input-checkbox [form]="form" key="studyModalityPresential"></app-input-checkbox>
+      <app-input-checkbox [form]="form" key="studyModalityPresential" (changeInput)="changeList()"></app-input-checkbox>
       <label>Presencial</label>
     </div>
     <div class="study-modality__last">
-      <app-input-checkbox [form]="form" key="studyModalityDistance"></app-input-checkbox>
+      <app-input-checkbox [form]="form" key="studyModalityDistance" (changeInput)="changeList()"></app-input-checkbox>
       <label>A distância</label>
     </div>
   </div>
   <app-input-range label="ATÉ QUANTO PODE PAGAR?" [form]="form" key="paymentRange" prefixValue="R$" [minRange]="100"
-    [maxRange]="10000">
+    [maxRange]="10000" (changeInput)="changeList()">
   </app-input-range>
   <div class="flex-between">
     <span>Resultado:</span>
@@ -54,7 +54,7 @@
   </div>
   <app-input-select class="select-order" name="order" [styles]="styles" [options]="orderArray" [form]="form" key="order"
     [unbordered]="true"></app-input-select>
-  <app-scholarship-list [options]="scholarshipsFiltered" [form]="form" key="scholarshipList"
+  <app-scholarship-list [options]="scholarshipsList" [form]="form" key="scholarshipList"
     (changeInput)="getScholarshipsList($event)"></app-scholarship-list>
   <div class="flex-between">
     <app-button [form]="form" key="cancel" label="Cancelar" colorClass="outline-blue"
