--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -21,6 +21,8 @@ $modal-overlay: #1F2D30 // opacity 88%
     color: $text-black
     margin: 0 0 10px 0
     padding: 0
+  app-scholarship-favorite
+    width: 100%
   fa-icon
     margin-right: 5px
 
